--- a/.github/workflows/manually-build.yml
+++ b/.github/workflows/manually-build.yml
@@ -87,8 +87,9 @@ jobs:
       - run: ndk-pkg setup
       - run: ndk-pkg sysinfo
       - run: ndk-pkg update
+      - run: |
+          sed -e 's/libidn2//g' -e 's/dopatch/# dopatch/g' -i ~/.ndk-pkg/repos.d/offical-core/formula/gnutls.yml
       - run: ndk-pkg install ${{ github.event.inputs.package-name }}:android-${{ github.event.inputs.target-api }}:${{ github.event.inputs.target-abis }} --build-type=${{ github.event.inputs.build-type }} --link-type=${{ github.event.inputs.link-type }} ${{ github.event.inputs.log-level }}
-
       - name: pack
         run: |
           set -ex
