--- a/.github/workflows/manually-build.yml
+++ b/.github/workflows/manually-build.yml
@@ -88,7 +88,8 @@ jobs:
       - run: ndk-pkg sysinfo
       - run: ndk-pkg update
       - run: |
-          sed -e 's/libidn2//g' -e 's/dopatch/# dopatch/g' -i ~/.ndk-pkg/repos.d/offical-core/formula/gnutls.yml &&
+          ls ~/.ndk-pkg/repos.d/offical-core/formula && \
+          sed -e 's/libidn2//g' -e 's/dopatch/# dopatch/g' -i ~/.ndk-pkg/repos.d/offical-core/formula/gnutls.yml && \
           echo "dopatch: cat lib/puny_decode.c && sed 's/#ifdef HAVE_SYMVER_ALIAS_SUPPORT/#if 0/g' -i lib/puny_decode.c && sed 's/#ifdef HAVE_SYMVER_ALIAS_SUPPORT/#if 0/g' -i lib/puny_encode.c" > ~/.ndk-pkg/repos.d/offical-core/formula/libidn2.yml
       - run: ndk-pkg install ${{ github.event.inputs.package-name }}:android-${{ github.event.inputs.target-api }}:${{ github.event.inputs.target-abis }} --build-type=${{ github.event.inputs.build-type }} --link-type=${{ github.event.inputs.link-type }} ${{ github.event.inputs.log-level }}
       - name: pack
